# LabProfi

./: .gitignore  README.md  docker-compose.yml
src/: Dockerfile  pyproject.toml  runserver.py
src/app/: admin.py  data.py  forms.py  models.py  settings.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_specialist_is_active.py  0003_servicerequest.py  0004_alter_servicerequest_finished_at_and_more.py  0005_alter_servicerequest_comment.py
src/app/static/css/: index.css
src/app/templates/: base.html  home.html  requests_list.html  service_info.html  service_select.html
src/auth_users/: forms.py  models.py  services.py  urls.py  views.py
src/auth_users/migrations/: 0001_initial.py  0002_delete_profile.py
src/auth_users/templates/registration/: login.html  profile.html  register.html  register_done.html
src/static/css/: index.css
